--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -9,22 +9,13 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1rem;
-
-  &._locked {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
 }
 
 .wrapper {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 100%;
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: stretch;
+  height: 100vh;
 }
 
 button {
@@ -67,10 +58,37 @@ a {
 .col-50 {
   width: 50%;
   position: relative;
+
+  @include lg-down {
+    width: 100%;
+  }
 }
 
 .col-30 {
   width: 30%;
+  position: relative;
+}
+
+.col-40 {
+  width: 40%;
+  position: relative;
+
+  @include lg-down {
+    width: 50%;
+  }
+}
+
+.col-60 {
+  width: 60%;
+  position: relative;
+
+  @include lg-down {
+    width: 50%;
+  }
+}
+
+.col-70 {
+  width: 70%;
   position: relative;
 }
 
@@ -94,11 +112,11 @@ a {
 }
 
 .fade-enter-active{
-  animation: fadeIn 0.5s;
+  animation: fadeIn 0.3s;
 }
 
 .fade-leave-active{
-  animation: fadeOut 0.5s;
+  animation: fadeOut 0.3s;
 }
 
 @keyframes fadeIn{
