--- a/src/assets/scss/shared/mixins.scss
+++ b/src/assets/scss/shared/mixins.scss
@@ -1,5 +1,5 @@
 @mixin xs-down {
-  @media only screen and (max-width: $xss) {
+  @media only screen and (max-width: $xs) {
       @content;
   }
 }
